initialisation avec une bd mongodb